# Wasm-Code-Cov

./: .gitignore  Cargo.toml  README.md  changes.md  dbg-notes.md  file_map.json  main.rs.gcov  modified-with-printer.wasm  modified-world.wit  modified.wasm  modify_wasm.sh  new.md  print-interface.wat  printer-composed.wasm
example-component/: Cargo.toml
example-component/src/: main.rs
examples/: Cargo.toml
examples/example-component/src/: bindings.rs
print-interface/: Cargo.toml
print-interface/src/: bindings.rs  lib.rs
print-interface/wit/: world.wit
runner/: Cargo.toml
runner/src/: gcov.rs  inc_counter.rs  lcov.rs  lib.rs  main.rs  store.rs
src/: annotator.rs  lib.rs  main.rs  noise.rs  printer.rs  runner.rs
src/annotator/: annotate.rs  data.rs  debug.rs  utils.rs
src/runner/: gcov.rs  inc_counter.rs  lcov.rs  store.rs
wat-annotator/: Cargo.toml
wat-annotator/src/: annotate.rs  blacklist.rs  counter.rs  data.rs  debug.rs  lib.rs  main.rs  offset_tracker.rs  utils.rs
wcov/: Cargo.toml
wcov/src/: main.rs
