[package]
name = "wcov"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
colored = "2.1.0"
#runner = {path = "../runner"}
serde_json = "1.0"
wasmparser = "0.215.0"
wasmprinter = "0.215.0"
wast = "215.0.0"
#wat-annotator = {path = "../wat-annotator"}
gimli = "0.31.0"
itertools = "0.13.0"
regex = "1.10.6"
serde = "1.0.208"
wasmtime = { version = "24.0.0", features = ["runtime", "component-model"] }
wasmtime-wasi = "24.0.0"