[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = "22.0.0"
wat-annotator = { path = "../wat-annotator" }
