[package]
name = "wat-annotator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
gimli = "0.31.0"
itertools = "0.13.0"
regex = "1.10.5"
serde = { workspace = true }
serde_json = { workspace = true }
wasmparser = { workspace = true}
wast = { workspace = true }
wasmtime = { workspace = true }
