[package]
name = "wcov"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
runner = {path = "../runner"}
wasmparser = { workspace = true }
wasmprinter = "0.215.0"
wast = { workspace = true }
wat-annotator = {path = "../wat-annotator"}
wit-component = "0.215.0"
wit-parser = "0.215.0"